--- a/group_flask_starter/client/src/pages/SignupPage.css
+++ b/group_flask_starter/client/src/pages/SignupPage.css
@@ -40,3 +40,22 @@ label {
   padding: 10px 0px 10px 0px;
   margin: 0;
 }
+
+.errors-container {
+   display: flex;
+   justify-content: center;
+}
+
+.errors{
+    display: none;
+    width: 100%;
+    background-color: rgb(253, 183, 173);
+    border: 1px solid rgb(250, 96, 74);
+    border-color: rgb(250, 96, 74);
+    border-radius: 3px;
+    color: #333333;
+    margin: 16px 0;
+    padding: 12px;
+    text-align: center;
+    list-style-type: none;
+}
