question display page

--- a/group_flask_starter/client/src/components/QuestionLi.css
+++ b/group_flask_starter/client/src/components/QuestionLi.css
@@ -19,7 +19,8 @@
 #qusername {
     grid-area: username;
     align-self: end;
-    font: 12px Arial #0077CC;
+    font: 12px Arial;
+    color: #0077CC;
 }
 
 #votecount {
