--- a/group_flask_starter/client/src/pages/Questions.css
+++ b/group_flask_starter/client/src/pages/Questions.css
@@ -1,15 +1,12 @@
 .qitem {
-    width: 60%;
+    width: 100%;
     border-bottom: 1px solid lightgrey;
     padding: 20px;
 }
 
-.MuiGrid-container {
-    width: 60%;
-}
 .qgrid {
     position: absolute;
-    left: 20%;
+    left: 15%;
     border-left: 1px solid lightgrey;
     border-right: 1px solid lightgrey;
 
@@ -17,13 +14,22 @@
 }
 
 .header {
-    width: 60%;
+    width: 100%;
     display: flex;
     justify-content: flex-start;
     border-bottom: 1px solid lightgray;
 }
 
 #headertext {
-    padding: 50px 0px 50px 80px;
+    padding: 50px 0px 30px 80px;
     font: 22px Arial;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+}
+
+#qcount {
+    font: 17px Arial;
+    padding-top: 20px;
 }
