--- a/group_flask_starter/client/src/index.css
+++ b/group_flask_starter/client/src/index.css
@@ -41,3 +41,12 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+body, html, #root {
+	height: 100% !important;
+	background-color: transparent !important;
+}
+
+body::backdrop {
+	background-color: transparent !important;
+}
