--- a/group_flask_starter/client/src/pages/SignupPage.css
+++ b/group_flask_starter/client/src/pages/SignupPage.css
@@ -5,8 +5,9 @@ html, body {
 form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     width: 100%;
+    height: 100%;
 }
 
 .MuiBox-root {
@@ -14,7 +15,6 @@ form {
   justify-content: center;
   align-items: baseline;
   width: 100%;
-
 }
 
 /* .MuiInputBase-input, .MuiOutlinedInput-input {
@@ -22,7 +22,7 @@ form {
 } */
 
 .MuiInputBase-root {
-  height: 35px;
+  height: 40px;
   width: 90%;
 }
 
@@ -34,17 +34,15 @@ form {
   }
 
 .signUpDiv {
-    position: absolute;
-    bottom: 10%;
-    right: 15%;
     border: 1px solid lightgrey;
     max-width: 24rem;
     width: 15rem;
-    height: 75%;
+    height: 100%;
     display: flex;
     justify-content: center;
     box-shadow: 2px 0px 30px rgb(190, 190, 190);
     border-radius: 10px;
+    margin-left: 20%;
 }
 
 label {
@@ -55,9 +53,9 @@ label {
 }
 
 .buttonDiv {
-  padding: 10px 0px 10px 0px;
+  padding: 10px 0px 5px 0px;
   margin-top: 10px;
-  width: 100%;
+  width: 100% !important;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -74,11 +72,12 @@ label {
 
 .signUpButton {
   width: 100%;
+
   display: flex;
   justify-content: center;
   flex-direction: column;
-  /* margin-bottom: 0px;
-  margin-top: 80%; */
+  margin-bottom: 0px;
+
 }
 
 .errors-container {
@@ -98,4 +97,47 @@ label {
     padding: 12px;
     text-align: center;
     list-style-type: none;
+}
+
+.signup {
+  width: 100% !important;
+}
+
+.signUpBlurb {
+  height: 400px;
+  width: 400px;
+  /* position: relative; */
+  left: 15%;
+  top: 30%;
+  bottom: 20%;
+  margin-right: 30px;
+}
+
+.blurbHeading {
+  font-size: x-large;
+
+  /* font-weight: bold; */
+}
+
+.middleDiv {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  top: 15%;
+  left: 10%;
+  right: 10%;
+  bottom: 15%;
+  align-items: center;
+}
+
+.signupP {
+  line-height: 2em;
+  font-size: smaller;
+  padding: 1em 0 1em 0;
+}
+
+.little {
+  margin-top: 1em;
+  font-size: xx-small;
+  color: gray;
 }
