--- a/group_flask_starter/client/src/components/NavBar.css
+++ b/group_flask_starter/client/src/components/NavBar.css
@@ -2,3 +2,15 @@
     background: #fafafb;
     color: #535a60;
 }
+
+#navbarSignup, #navbarLogin {
+    padding: 12px;
+    margin: 10px;
+    border-radius: 5px;
+    border: none;
+}
+
+#navbarSignup {
+    background-color: #0077cc;
+    color: white;
+}
