--- a/group_flask_starter/client/src/pages/LoginPage.css
+++ b/group_flask_starter/client/src/pages/LoginPage.css
@@ -1,13 +1,39 @@
 #login-form {
+    position: absolute;
+    top: 20%;
+    left: 35%;
     margin: auto;
-    height: 100vh;
     display: flex;
+    height: 70%;
     align-items: center;
-    width: 400px;
+    width: 300px;
+    border: 1px solid lightgrey;
+    padding: 15px;
 }
 
-.buttonDiv {
+/* .buttonDiv {
   padding: 15px 0px 15px 0px;
   margin: 0;
   width: 41.5%;
+} */
+
+.buttonDiv {
+  padding: 10px 0px 5px 0px;
+  margin-top: 10px;
+  width: 100% !important;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    width: 100%;
+    height: 100%;
+}
+
+.signup {
+  width: 100%;
 }
