first last changes

--- a/group_flask_starter/client/src/components/QuestionLi.css
+++ b/group_flask_starter/client/src/components/QuestionLi.css
@@ -15,6 +15,7 @@
     color: blue;
     font: 16px Arial;
     justify-self: left;
+    text-decoration: none;
 }
 #qusername {
     grid-area: username;
