--- a/group_flask_starter/client/src/components/QuestionLi.css
+++ b/group_flask_starter/client/src/components/QuestionLi.css
@@ -15,7 +15,7 @@
     color: blue;
     font: 16px Arial;
     justify-self: left;
-    text-decoration: none;
+
 }
 #qusername {
     grid-area: username;
@@ -50,6 +50,7 @@
     grid-area: answer;
     font: 13px Arial;
     justify-self: left;
+
 }
 
 #space {
@@ -69,4 +70,8 @@
 .countlabel {
     font: 11px Arial;
     color: #6A737C;
+}
+
+#linkz {
+    text-decoration: none;
 }
