--- a/group_flask_starter/client/src/pages/QuestionId.css
+++ b/group_flask_starter/client/src/pages/QuestionId.css
@@ -76,3 +76,10 @@
     text-decoration: none;
     color: white;
 }
+
+.aitem1 {
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 5%;
+    font: 22px Arial;
+}
