answer form and display

--- a/group_flask_starter/client/src/pages/QuestionId.css
+++ b/group_flask_starter/client/src/pages/QuestionId.css
@@ -78,8 +78,18 @@
 }
 
 .aitem1 {
+    width: 100%;
     display: flex;
     justify-content: flex-start;
     padding-left: 5%;
     font: 22px Arial;
+    border-right: 1px solid lightgrey;
+}
+
+.formitem1 {
+    width: 100%;
+    padding: 20px;
+    border-right: 1px solid lightgrey;
+    display: flex;
+    justify-content: flex-start;
 }
