answer up and downvotes

--- a/group_flask_starter/client/src/pages/QuestionId.css
+++ b/group_flask_starter/client/src/pages/QuestionId.css
@@ -93,3 +93,10 @@
     display: flex;
     justify-content: flex-start;
 }
+
+.aitem2 {
+    width: 100%;
+    padding: 20px;
+    border-right: 1px solid lightgrey;
+    border-bottom: 1px solid lightgrey;
+}
