--- a/group_flask_starter/client/src/pages/QuestionId.css
+++ b/group_flask_starter/client/src/pages/QuestionId.css
@@ -98,5 +98,5 @@
     width: 100%;
     padding: 20px;
     border-right: 1px solid lightgrey;
-    border-bottom: 1px solid lightgrey;
+    /* border-bottom: 1px solid lightgrey; */
 }
