--- a/group_flask_starter/client/src/pages/QuestionForm.css
+++ b/group_flask_starter/client/src/pages/QuestionForm.css
@@ -64,3 +64,18 @@
     margin-top: 0;
     padding: 10px;
 }
+
+
+.taglist {
+    padding: 20px;
+}
+
+.tags2 {
+    font: 12px Arial;
+    color: #39739D;
+    background-color: #E1ECF4;
+    padding: 5px;
+    margin-left: 20px;
+    cursor: pointer;
+
+}
