filter on question page

--- a/group_flask_starter/client/src/pages/QuestionId.css
+++ b/group_flask_starter/client/src/pages/QuestionId.css
@@ -100,3 +100,10 @@
     border-right: 1px solid lightgrey;
     /* border-bottom: 1px solid lightgrey; */
 }
+
+.left2 {
+    position: absolute;
+    left: 76%;
+    top: 25%;
+    width: 22%;
+}
