--- a/group_flask_starter/client/src/pages/Questions.css
+++ b/group_flask_starter/client/src/pages/Questions.css
@@ -22,7 +22,7 @@
 }
 
 #headertext {
-    padding: 50px 0px 30px 80px;
+    padding: 50px 0px 30px 60px;
     font: 22px Arial;
     display: flex;
     flex-direction: column;
@@ -64,15 +64,20 @@
     padding-left: 10px;
 }
 
-.ask-button {
+.ask-buttontext {
     text-decoration: none;
-    border: none;
-    background-color: #0095F6;
-    border-radius: 4px;
     color: white;
+
+
+}
+
+.ask-button {
+    color: white;
+    border: none;
+    border-radius: 4px;
+    background-color: #0095F6;
     height: 35px;
-    width: 14%;
-    margin: 5%;
+    width: 100%;
 }
 
 #headergroup {
@@ -223,4 +228,54 @@
     padding: 5px;
     margin-right: 5px;
 
+}
+
+.filterspan {
+    margin-top: 20%;
+}
+
+.buttonGroup {
+    display: flex;
+    flex-direction: column;
+    padding: 4%;
+}
+
+
+.filter1 {
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    border-left: .5px solid #6A737C;
+    border-top: .5px solid #6A737C;
+    border-bottom: .5px solid #6A737C;
+    border-right: none;
+    width: 50%;
+    padding-top: 8%;
+    padding-bottom: 8%;
+    font: 12px Arial;
+    background-color: white;
+    color: #6A737C;
+    outline:none;
+    cursor:pointer;
+
+}
+.filter2 {
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+    border-left: .5px solid #6A737C;
+    border-right: .5px solid #6A737C;
+    border-top: .5px solid #6A737C;
+    border-bottom: .5px solid #6A737C;
+    width: 50%;
+    padding-top: 8%;
+    padding-bottom: 8%;
+    font: 12px Arial;
+    background-color: white;
+    color: #6A737C;
+    outline:none;
+    cursor:pointer;
+
+}
+
+.selected {
+    background-color: #E4E6E8;
 }
