--- a/group_flask_starter/client/src/components/QuestionLi.css
+++ b/group_flask_starter/client/src/components/QuestionLi.css
@@ -17,11 +17,20 @@
     justify-self: left;
 
 }
+
+.qlink {
+    text-decoration: none;
+    color: #0077CC;
+}
 #qusername {
     grid-area: username;
     align-self: center;
     font: 12px Arial;
     color: #0077CC;
+    /* background-color: #E1ECF4; */
+    padding: 20px;
+    display: flex;
+    align-items: flex-start;
 }
 
 #votecount {
@@ -74,4 +83,18 @@
 
 #linkz {
     text-decoration: none;
+}
+
+
+#accounticon {
+    /* background-color: orange; */
+    color: white;
+    font: 14px Arial;
+    font-weight: bold;
+    height: 25px;
+    width: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10%;
 }
