--- a/group_flask_starter/client/src/components/NavBar.css
+++ b/group_flask_starter/client/src/components/NavBar.css
@@ -15,7 +15,14 @@
     color: white;
 }
 
+#navLinkBar1 {
+    text-decoration: none;
+    color: white;
+
+}
+
 #navLinkBar {
     text-decoration: none;
+    color: #0077cc;
 
 }
