--- a/group_flask_starter/client/src/components/NavBar.css
+++ b/group_flask_starter/client/src/components/NavBar.css
@@ -3,11 +3,18 @@
     color: #535a60;
 }
 
-#navbarSignup, #navbarLogin {
+#navbarSignup {
     padding: 12px;
     margin: 10px;
     border-radius: 5px;
     border: none;
+}
+
+#navbarLogin {
+    padding: 12px;
+    margin: 10px;
+    border-radius: 5px;
+    border: .5px solid  #0077cc;
 }
 
 #navbarSignup {
